--- a/06._DogInder/public/components/header/header.html
+++ b/06._DogInder/public/components/header/header.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
     <link rel="stylesheet" href="/assets/css/main.css">
     <link rel="icon" href="/assets/images/logo.png">
-    <title>DogInder</title>
+
+    $$CSS_LINKS$$
+
+    <title>$$TAB_TITLE$$</title>
 </head>
 <body>
 
