--- a/06._DogInder/public/components/header/header.html
+++ b/06._DogInder/public/components/header/header.html
@@ -18,6 +18,8 @@
     <!--alt er fordi så billedet har en tekst og hvis logoet ikke duer hviser den, den tekst-->
     <!--Hvis du ville finde billede = advanced image search, brugerrettigheder osv. (.. for os ud af frontend og ind i public)-->
     <a href="/matches">Matches</a>
+    <a href="/contact">Contact</a>
+
 </nav>
 
 <main>
